GRID alignment corrected

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-@import "assets/styles/variables";
-@import "assets/styles/typography";
+@import 'assets/styles/variables';
+@import 'assets/styles/typography';
 
 :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol';
     font-size: 14px;
     color: rgba(9, 23, 71, 1);
     box-sizing: border-box;
@@ -15,12 +17,6 @@
     width: 5px;
 }
 
-::-webkit-scrollbar-track {
-    // box-shadow: inset 0 0 5px grey;
-    // background: #f1f1f1;
-    // border-radius: 10px;
-}
-
 ::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 10px;
@@ -29,5 +25,11 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: 'Helvetica Neue', Roboto, sans-serif !important;
+}
